ExportedTemplate-gksjsy/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_websrv02_name": {
            "defaultValue": "websrv02",
            "type": "String"
        },
        "virtualNetworks_vnet_gksjsy_name": {
            "defaultValue": "vnet-gksjsy",
            "type": "String"
        },
        "networkInterfaces_websrv02252_name": {
            "defaultValue": "websrv02252",
            "type": "String"
        },
        "networkSecurityGroups_nsg_jsy_name": {
            "defaultValue": "nsg-jsy",
            "type": "String"
        },
        "publicIPAddresses_websrv02_ip_name": {
            "defaultValue": "websrv02-ip",
            "type": "String"
        },
        "subnets_subnet01_name": {
            "defaultValue": "subnet01",
            "type": "String"
        },
        "securityRules_allow_ssh_name": {
            "defaultValue": "allow_ssh",
            "type": "String"
        },
        "securityRules_allow_http_name": {
            "defaultValue": "allow_http",
            "type": "String"
        },
        "securityRules_allow_https_name": {
            "defaultValue": "allow_https",
            "type": "String"
        },
        "securityRules_allow_greg_any_name": {
            "defaultValue": "allow_greg_any",
            "type": "String"
        },
        "virtualMachines_websrv02_id": {
            "defaultValue": "/subscriptions/4a3f30ea-875f-4d03-b544-24db6b1adca5/resourceGroups/gksjsy/providers/Microsoft.Compute/disks/websrv02_OsDisk_1_5cf72debf59d43d18067d50fc20e5bd9",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/4a3f30ea-875f-4d03-b544-24db6b1adca5/resourceGroups/gksjsy/providers/Microsoft.Compute/virtualMachines/websrv02'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_websrv02_name')]",
            "apiVersion": "2018-06-01",
            "location": "eastus2",
            "tags": {},
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_DS1_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "18.04-LTS",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('virtualMachines_websrv02_name'),'_OsDisk_1_5cf72debf59d43d18067d50fc20e5bd9')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Standard_LRS",
                            "id": "[parameters('virtualMachines_websrv02_id')]"
                        },
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_websrv02_name')]",
                    "adminUsername": "bswedeen",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false,
                        "provisionVMAgent": true
                    },
                    "secrets": [],
                    "allowExtensionOperations": true
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_websrv02252_name'))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_websrv02252_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/4a3f30ea-875f-4d03-b544-24db6b1adca5/resourceGroups/gksjsy/providers/Microsoft.Network/networkInterfaces/websrv02252'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_websrv02252_name')]",
            "apiVersion": "2018-08-01",
            "location": "eastus2",
            "tags": {},
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "11c675a0-49aa-4efa-913d-0e1cb33d86cb",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"de1222e4-eb11-4994-8051-418ebad31b25\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.0.5",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_websrv02_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_vnet_gksjsy_name'), parameters('subnets_subnet01_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "mcofomqxahvuzapzk0hvu3z51f.cx.internal.cloudapp.net"
                },
                "macAddress": "00-0D-3A-03-D7-DA",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "primary": true,
                "tapConfigurations": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_websrv02_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_vnet_gksjsy_name'), parameters('subnets_subnet01_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/4a3f30ea-875f-4d03-b544-24db6b1adca5/resourceGroups/gksjsy/providers/Microsoft.Network/networkSecurityGroups/nsg-jsy'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_nsg_jsy_name')]",
            "apiVersion": "2018-08-01",
            "location": "eastus2",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "5fc7f5e4-1edf-42f7-b428-b6d1ed675842",
                "securityRules": [
                    {
                        "name": "allow_http",
                        "etag": "W/\"16c08bef-0566-4e7f-9000-c6b41c226ef2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "allow_https",
                        "etag": "W/\"16c08bef-0566-4e7f-9000-c6b41c226ef2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "allow_ssh",
                        "etag": "W/\"16c08bef-0566-4e7f-9000-c6b41c226ef2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "allow_greg_any",
                        "etag": "W/\"16c08bef-0566-4e7f-9000-c6b41c226ef2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "5.151.95.5",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 130,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"16c08bef-0566-4e7f-9000-c6b41c226ef2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"16c08bef-0566-4e7f-9000-c6b41c226ef2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"16c08bef-0566-4e7f-9000-c6b41c226ef2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"16c08bef-0566-4e7f-9000-c6b41c226ef2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"16c08bef-0566-4e7f-9000-c6b41c226ef2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"16c08bef-0566-4e7f-9000-c6b41c226ef2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/4a3f30ea-875f-4d03-b544-24db6b1adca5/resourceGroups/gksjsy/providers/Microsoft.Network/publicIPAddresses/websrv02-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[parameters('publicIPAddresses_websrv02_ip_name')]",
            "apiVersion": "2018-08-01",
            "location": "eastus2",
            "tags": {},
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "567ce285-c708-45dd-a2c6-40e8e7d85d44",
                "ipAddress": "40.70.201.198",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/4a3f30ea-875f-4d03-b544-24db6b1adca5/resourceGroups/gksjsy/providers/Microsoft.Network/virtualNetworks/vnet-gksjsy'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_vnet_gksjsy_name')]",
            "apiVersion": "2018-08-01",
            "location": "eastus2",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "32579c60-0117-4ceb-81f9-568f5a773fdd",
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "subnet01",
                        "etag": "W/\"318ad1bd-544d-428c-bbd6-836369fff89d\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.0.0.0/24",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_nsg_jsy_name'))]"
                            },
                            "serviceEndpoints": [],
                            "delegations": []
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false,
                "enableVmProtection": false
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_nsg_jsy_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/4a3f30ea-875f-4d03-b544-24db6b1adca5/resourceGroups/gksjsy/providers/Microsoft.Network/networkSecurityGroups/nsg-jsy/securityRules/allow_http'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_nsg_jsy_name'), '/', parameters('securityRules_allow_http_name'))]",
            "apiVersion": "2018-08-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_nsg_jsy_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/4a3f30ea-875f-4d03-b544-24db6b1adca5/resourceGroups/gksjsy/providers/Microsoft.Network/networkSecurityGroups/nsg-jsy/securityRules/allow_https'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_nsg_jsy_name'), '/', parameters('securityRules_allow_https_name'))]",
            "apiVersion": "2018-08-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "443",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 110,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_nsg_jsy_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/4a3f30ea-875f-4d03-b544-24db6b1adca5/resourceGroups/gksjsy/providers/Microsoft.Network/networkSecurityGroups/nsg-jsy/securityRules/allow_ssh'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_nsg_jsy_name'), '/', parameters('securityRules_allow_ssh_name'))]",
            "apiVersion": "2018-08-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 120,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_nsg_jsy_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/4a3f30ea-875f-4d03-b544-24db6b1adca5/resourceGroups/gksjsy/providers/Microsoft.Network/networkSecurityGroups/nsg-jsy/securityRules/allow_greg_any'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_nsg_jsy_name'), '/', parameters('securityRules_allow_greg_any_name'))]",
            "apiVersion": "2018-08-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "5.151.95.5",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 130,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_nsg_jsy_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/4a3f30ea-875f-4d03-b544-24db6b1adca5/resourceGroups/gksjsy/providers/Microsoft.Network/virtualNetworks/vnet-gksjsy/subnets/subnet01'.",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworks_vnet_gksjsy_name'), '/', parameters('subnets_subnet01_name'))]",
            "apiVersion": "2018-08-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.0.0/24",
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_nsg_jsy_name'))]"
                },
                "serviceEndpoints": [],
                "delegations": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_vnet_gksjsy_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_nsg_jsy_name'))]"
            ]
        }
    ]
}
